# Comb

./: .gitignore  .gitmodules  Box3d.cuh  CMakeLists.txt  CommFactory.cuh  LICENSE  Makefile  MeshData.cuh  MeshInfo.cuh  MultiBuffer.cu  MultiBuffer.cuh  README.md  RELEASE  basic_mempool.hpp  batch_launch.cu  batch_launch.cuh  batch_utils.cuh  comb.cu  comm.cuh  cuda_utils.cuh  for_all.cuh  memory.cuh  mesh.cuh  mutex.hpp  persistent_launch.cu  persistent_launch.cuh  profiling.cuh  test_comm.cu  utils.cuh
cmake/: FindNvToolsExt.cmake  Findgdsync.cmake  Findgpump.cmake  Findmp.cmake  FindrocTX.cmake  Findumr.cmake  SetupBasics.cmake  SetupCombConfig.cmake  SetupCombOptions.cmake  SetupCompilers.cmake  SetupDependentOptions.cmake  SetupPackages.cmake
host-configs/lc-builds/bgqos/: clang_4_0_0.cmake
host-configs/lc-builds/blueos/: clang_6_0_0.cmake  clang_X.cmake  clang_coral_2017_10_13.cmake  clang_coral_2017_12_06.cmake  clang_coral_2018_02_09.cmake  clang_coral_2018_04_17.cmake  clang_coral_2018_05_23.cmake  clang_coral_2018_08_08.cmake  clang_upstream_2018_12_03.cmake  clang_upstream_2019_03_19.cmake  clang_upstream_2019_03_26.cmake  gcc_4_9_3.cmake  gcc_X.cmake  nvcc_clang_9_0_0.cmake  nvcc_clang_X.cmake  nvcc_clang_coral_2017_12_06.cmake  nvcc_clang_coral_2018_02_09.cmake  nvcc_clang_coral_2018_04_17.cmake  nvcc_clang_coral_2018_05_23.cmake  nvcc_clang_coral_2018_08_08.cmake  nvcc_clang_ibm_2019_10_03.cmake  nvcc_clang_upstream_2018_12_03.cmake  nvcc_clang_upstream_2019_03_19.cmake  nvcc_gcc_4_9_3.cmake  nvcc_gcc_X.cmake  nvcc_xl_2018_07_17.cmake  nvcc_xl_2018_08_24.cmake  nvcc_xl_2018_09_13.cmake  nvcc_xl_2018_11_26.cmake  nvcc_xl_2019_02_07.cmake  nvcc_xl_2019_08_20.cmake  nvcc_xl_2019_12_23.cmake  nvcc_xl_X.cmake  pgi_X.cmake  xl_2018_07_17.cmake  xl_2018_08_24.cmake  xl_2018_09_13.cmake  xl_2018_11_26.cmake  xl_2019_02_07.cmake  xl_2020_X.cmake  (+1 more)
host-configs/lc-builds/chaos/: clang_6_0_0.cmake  gcc_4_9_3.cmake  icpc_16_0_258.cmake  icpc_17_0_174.cmake  icpc_18_0_163.cmake
host-configs/lc-builds/toss3/: clang_6_0_0.cmake  clang_X.cmake  clangcuda_6_0_0_nvcc_8_0.cmake  gcc_4_9_3.cmake  gcc_6_1_0.cmake  gcc_7_1_0.cmake  gcc_X.cmake  hip.cmake  hip_4_link_X.cmake  hip_X.cmake  icpc_16_0_4.cmake  icpc_17_0_2.cmake  icpc_18_0_2.cmake  icpc_19_0_4.cmake  icpc_19_0_beta.cmake  icpc_X_gcc7headers.cmake  icpc_X_gcc8headers.cmake  nvcc_clang_4_0_0.cmake  nvcc_gcc_4_9_3.cmake  nvcc_gcc_6_1_0.cmake  pgi_X.cmake
host-configs/lc-builds/toss4/: hip_X.cmake
host-configs/ubuntu-builds/: clang_X.cmake  gcc_X.cmake  hip.cmake  nvcc_gcc_X.cmake
include/: Box3d.cuh  Box3d.hpp  CommFactory.cuh  CommFactory.hpp  ExecContext.hpp  MeshData.cuh  MeshData.hpp  MeshInfo.cuh  MeshInfo.hpp  Message.hpp  MessageBase.hpp  MultiBuffer.cuh  MultiBuffer.hpp  SetReset.cuh  SetReset.hpp  align.hpp  basic_mempool.hpp  batch_exec.cuh  batch_launch.cuh  batch_launch.hpp  batch_utils.cuh  batch_utils.hpp  comb.hpp  comm.cuh  comm.hpp  comm_pol_gdsync.hpp  comm_pol_gpump.hpp  comm_pol_mock.hpp  comm_pol_mp.hpp  comm_pol_mpi.hpp  comm_pol_mpi_persistent.hpp  comm_pol_umr.hpp  comm_utils_gdsync.hpp  comm_utils_gpump.hpp  comm_utils_mp.hpp  comm_utils_mpi.hpp  comm_utils_umr.hpp  config.hpp.in  cuda_utils.cuh  cuda_utils.hpp  (+42 more)
scripts/: basic_tests.bash  combine_output.lua  focused_cuda_graphs_tests.bash  focused_gdsync_tests.bash  focused_gpump_tests.bash  focused_mp_tests.bash  focused_mpi_type_tests.bash  focused_tests.bash  focused_umr_tests.bash  mock_cuda_graphs_tests.bash  mock_tests.bash  run_nvprof.bash  run_scale_tests.bash  run_tests.bash  run_tests_mvapich2.sh  scale_tests.bash  sep_out.bash
scripts/lc-builds/: blueos_clang.sh  blueos_gcc.sh  blueos_nvcc_clang.sh  blueos_nvcc_gcc.sh  blueos_nvcc_xl.sh  blueos_pgi.sh  blueos_xl.sh  toss3_clang.sh  toss3_gcc.sh  toss3_hipcc.sh  toss3_icpc.sh  toss3_pgi.sh  toss4_amdclang.sh  toss4_cray-mpich_amdclang.sh
scripts/lc-builds/bgqos/: clang_4_0_0.sh
scripts/lc-builds/blueos/: clang_6_0_0.sh  clang_coral_2017_12_06.sh  clang_coral_2018_02_09.sh  clang_coral_2018_04_17.sh  clang_coral_2018_05_23.sh  clang_coral_2018_08_08.sh  clang_upstream_2018_12_03.sh  clang_upstream_2019_03_19.sh  gcc_4_9_3.sh  mock_gcc_4_9_3.sh  mock_nvcc_10_1_clang_9_0_0.sh  mock_nvcc_10_1_gcc_4_9_3.sh  mock_nvcc_10_2_gcc_4_9_3.sh  mock_nvcc_dev_10_2_clang_9_0_0.sh  mock_nvcc_dev_10_2_gcc_4_9_3.sh  mvapich2-gdr_nvcc_9_2_gcc_7_3_1.sh  nvcc_10_1_clang_9_0_0.sh  nvcc_10_1_clang_ibm_2019_10_03.sh  nvcc_10_1_clang_upstream_2018_12_03.sh  nvcc_10_1_clang_upstream_2019_03_19.sh  nvcc_10_1_clang_upstream_2019_03_26.sh  nvcc_10_1_xl_2019_02_07.sh  nvcc_10_1_xl_2019_08_20.sh  nvcc_10_1_xl_2019_12_23.sh  nvcc_10_2_xl_2019_08_20.sh  nvcc_9_0_clang_coral_2017_12_06.sh  nvcc_9_0_clang_coral_2018_02_09.sh  nvcc_9_0_clang_coral_2018_04_17.sh  nvcc_9_0_clang_coral_2018_05_23.sh  nvcc_9_0_gcc_4_9_3.sh  nvcc_9_1_clang_coral_2017_12_06.sh  nvcc_9_1_clang_coral_2018_02_09.sh  nvcc_9_1_clang_coral_2018_04_17.sh  nvcc_9_1_clang_coral_2018_05_23.sh  nvcc_9_1_gcc_4_9_3.sh  nvcc_9_2_clang_coral_2017_12_06.sh  nvcc_9_2_clang_coral_2018_02_09.sh  nvcc_9_2_clang_coral_2018_04_17.sh  nvcc_9_2_clang_coral_2018_05_23.sh  nvcc_9_2_clang_coral_2018_08_08.sh  (+8 more)
scripts/lc-builds/chaos/: clang_6_0_0.sh  gcc_4_9_3.sh  icpc_16_0_258.sh  icpc_17_0_174.sh  icpc_18_0_163.sh
scripts/lc-builds/toss3/: clang_6_0_0.sh  clangcuda_6_0_0_nvcc_8_0.sh  gcc_4_9_3.sh  gcc_6_1_0.sh  gcc_7_1_0.sh  icpc_16_0_4.sh  icpc_17_0_2.sh  icpc_18_0_2.sh  icpc_19_0_4.sh  icpc_19_0_beta.sh  (+3 more)
scripts/ubuntu-builds/: ubuntu_clang.sh  ubuntu_gcc.sh  ubuntu_hipcc.sh  ubuntu_nvcc10_gcc8.sh
src/: CMakeLists.txt  MultiBuffer.cpp  MultiBuffer.cu  batch_launch.cpp  batch_launch.cu  comb.cpp  comb.cu  comm.cpp  do_cycles.cpp.in  graph_launch.cpp  persistent_launch.cpp  persistent_launch.cu  print.cpp  print_timer.cpp  test_copy.cpp  test_cycles.cpp  test_cycles_basic.cpp  test_cycles_gdsync.cpp  test_cycles_gpump.cpp  test_cycles_mock.cpp  test_cycles_mp.cpp  test_cycles_mpi.cpp  test_cycles_mpi_persistent.cpp  test_cycles_umr.cpp  warmup.cpp
